Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_SM_Adjust_Columns__mdt/Portal_V2_SM_Adjust_Columns__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used to add/remove fields we need to display for &quot;Alter Columns&quot; section on &quot;Shift Management&quot; page.</description>
    <label>Portal V2 - SM - Adjust Columns</label>
    <pluralLabel>Portal V2 - SM - Adjust Columns</pluralLabel>
</CustomObject>