Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_SM_Adjust_Columns__mdt/fields/Display_In_Approved_Shifts_View__c.field-meta.xml
<CustomField>
    <fullName>Display_In_Approved_Shifts_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display_In_Approved_Shifts_View</description>
    <label>Display In Approved Shifts View</label>
    <type>Checkbox</type>
</CustomField>