Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_SM_Adjust_Columns__mdt/fields/Filterable__c.field-meta.xml
<CustomField>
    <fullName>Filterable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filterable</label>
    <type>Checkbox</type>
</CustomField>