Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_SM_Adjust_Columns__mdt/validationRules/Include_in_mobile_must_have_order.validationRule-meta.xml
<ValidationRule>
    <fullName>Include_in_mobile_must_have_order</fullName>
    <active>true</active>
    <errorConditionFormula>Display_In_Mobile__c &amp;&amp; ISBLANK( Mobile_Column_Order__c )</errorConditionFormula>
    <errorMessage>Columns included in mobile view must have a column order</errorMessage>
</ValidationRule>